[maven-release-plugin] prepare release enhanced-security-logger-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 
 	<artifactId>enhanced-security-logger</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Enhanced Security Logger Plugin</name>
 	<description>Adds enhanced security logging to the jenkins.</description>
 	<packaging>hpi</packaging>
